# djaodjin-survey

./: .gitignore  LICENSE.txt  Makefile  README.md  changelog  pyproject.toml  requirements.txt  setup.py
docs/: analytics.rst  conf.py  encoding.rst  extensions.rst  getting-started.rst  index.rst  models.rst  portfolios.rst
survey/: __init__.py  admin.py  compat.py  docs.py  filters.py  forms.py  helpers.py  mixins.py  models.py  pagination.py  queries.py  serializers.py  settings.py  signals.py  utils.py
survey/api/: base.py  campaigns.py  matrix.py  metrics.py  portfolios.py  response.py  sample.py  serializers.py  serializers_overrides.py  units.py
survey/management/commands/: expire_optins.py
survey/static/css/: matrix-chart.css
survey/static/js/: djaodjin-categorize.js  djaodjin-matrix.js  djaodjin-set.js  (+7 more)
survey/templatetags/: survey_tags.py
survey/urls/: __init__.py  api.py  interviewee.py  manager.py  matrix.py  portfolios.py  response.py  sample.py
survey/views/: campaigns.py  createquestion.py  createsurvey.py  displaysurvey.py  edit.py  matrix.py  portfolios.py  response.py  sample.py
testsite/: authentication.py  models.py  notifications.py  package.json  requirements-legacy.txt  requirements.txt  settings.py  urls.py  wsgi.py
testsite/api/: accounts.py  auth.py
testsite/etc/: gunicorn.conf
testsite/fixtures/: 200-benchmarks.json  default-db.json  descr.md  engineering-alt-units.json  engineering-si-units.json  initial_data.json  testquestions.json
testsite/templates/: base.html  index.html
testsite/templatetags/: testsite_tags.py
(+46 files in other folders)
